--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <html>
 
-<head>
-<title>reto asinc</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale-1.0">
+        <title>reto asinc</title>
+        <link rel="stylesheet" href="css/style.css">
+        <script src="javaScript/script.js" defer></script>
+    </head>
+        <body>
 
-<body>
+        <h1>This is a Heading</h1>
+        <p>This is a paragraph.</p>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+    </body>
 
 </html>
