--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale-1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>reto asinc</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="javaScript/script.js" defer></script>
