--- a/index.html
+++ b/index.html
@@ -10,8 +10,35 @@
 
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <div class="MainDiv">
+
+        <header><h1>Titulo?</h1></header>
+
+
+        <main>
+
+            <h1>Favorites</h1>
+            <div id="favoriteContainer">
+
+
+
+            </div>
+
+
+            <h1>Catalog</h1>
+            <button>Open Catalog</button>
+            <div id="catalogContainer">
+
+
+
+            </div>
+
+        </main>
+
+
+        <footer><p>Santiago Bedoya - Nicolas Salazar - Lautaro Biondo</p></footer>
+
+    </div>
 
 </body>
 
