--- a/index.html
+++ b/index.html
@@ -20,16 +20,106 @@
             <h1>Favorites</h1>
             <div id="favoriteContainer">
 
-
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
 
             </div>
 
 
-            <h1>Catalog</h1>
-            <button>Open Catalog</button>
+            <div class="headerContainer">
+                <h1>Catalog</h1>
+                <button>Open Catalog</button>
+            </div>
             <div id="catalogContainer">
 
-
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
 
             </div>
 
