--- a/index.html
+++ b/index.html
@@ -22,7 +22,25 @@
 
 
         <main>
+            <div class="headerContainer">
+                <h1>Cocktail</h1>
+                <button id="add-cocktail">Random cocktail</button>
+            </div>
+            <div id="catalogContainer">
 
+                <div class="itemContainer">
+                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                    <div class="headerContainer">
+                        <h2>ID. CockTail</h2>
+                        <button class="favoriteButton">★</button>
+                    </div>
+                    <h2>Mojito</h2>
+                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
+                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
+                    <p>estos serian los ingredientes</p>
+                </div>
+
+            </div>
             <h1>Favorites</h1>
             <div id="favoriteContainer">
 
@@ -110,24 +128,7 @@
             </div>
 
 
-            <div class="headerContainer">
-                <h1>Catalog</h1>
-                <button>Open Catalog</button>
-            </div>
-            <div id="catalogContainer">
-
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-
-            </div>
+            
 
         </main>
 
