Puesto en comentario el itemContainer placeholder

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                 <button id="add-cocktail">Random cocktail</button>
             </div>
             <div id="catalogContainer">
-
-                <div class="itemContainer">
+                <!--
+                <div class="itemContainer">-->
                     <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
+                     <!--
                     <div class="headerContainer">
                         <h2>ID. CockTail</h2>
                         <button class="favoriteButton">★</button>
@@ -38,7 +39,7 @@
                     <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
                     <p>estos serian los ingredientes</p>
                 </div>
-
+                -->
             </div>
             <h1>Favorites</h1>
             <div id="favoriteContainer">
