--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <html>
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>reto asinc</title>
-        <link rel="stylesheet" href="css/style.css">
-        <script src="javaScript/script.js" defer></script>
-    </head>
-        <body>
+<head>
+<title>reto asinc</title>
+<link rel="stylesheet" href="css/style.css">
+    <script src="javaScript/script.js"></script>
+    <script src="javaScript/favorites.js"></script>
+    <script src="javaScript/cocktail_card_item.js"></script>
+</head>
+
+<body>
 
         <h1>This is a Heading</h1>
         <p>This is a paragraph.</p>
@@ -20,120 +21,27 @@
 
         <header><h1>Titulo?</h1></header>
 
-
         <main>
-            <div class="headerContainer">
-                <h1>Cocktail</h1>
-                <button id="add-cocktail">Random cocktail</button>
-            </div>
-            <div id="catalogContainer">
-                <!--
-                <div class="itemContainer">-->
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                     <!--
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                -->
-            </div>
+
             <h1>Favorites</h1>
             <div id="favoriteContainer">
 
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-                <div class="itemContainer">
-                    <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                    <div class="headerContainer">
-                        <h2>ID. CockTail</h2>
-                        <button class="favoriteButton">★</button>
-                    </div>
-                    <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                    <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p>estos serian los ingredientes</p>
-                </div>
-
             </div>
 
 
-            
+            <div class="headerContainer">
+                <h1>Catalog</h1>
+                <button>Open Catalog</button>
+            </div>
+            <div id="catalogContainer">
+
+
+            </div>
 
         </main>
 
 
-        <footer><p>Santiago Bedoya - Nicolas Salazar - Lautaro Biondo</p></footer>
+        <footer><p>Santiago Bedoya - Nicolás Salazar - Lautaro Biondo</p></footer>
 
     </div>
 
