--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <div class="headerContainer">
                 <h1>Cocktail</h1>
                 <button id="add-cocktail">Random cocktail</button>
+                <progress id="progress-bar" class="hidden"></progress>
             </div>
             <div id="catalogContainer">
                 <!--
                 <div class="itemContainer">-->
                     <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                     <!--
-                    <div class="headerContainer">
+                    <!--<div class="headerContainer">
                         <h2>ID. CockTail</h2>
                         <button class="favoriteButton">★</button>
                     </div>
@@ -39,7 +39,7 @@
                     <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
                     <p>estos serian los ingredientes</p>
                 </div>
-                -->
+            -->
             </div>
             <h1>Favorites</h1>
             <div id="favoriteContainer">
