--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="headerContainer">
                 <h1>Cocktail</h1>
                 <button id="add-cocktail">Random cocktail</button>
-                <progress id="progress-bar" class="hidden"></progress>
+                <!--<progress id="progress-bar" class="hidden"></progress>-->
             </div>
             <div id="catalogContainer">
                 <!--
