--- a/index.html
+++ b/index.html
@@ -25,104 +25,75 @@
 
                     <div class="itemContainer">
                         <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
+                        <div class="frontCont">
+                            <div class="headerContainer">
+                                <h2>ID. CockTail</h2>
+                                <button class="favoriteButton">★</button>
+                            </div>
+                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
                         </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
+                        <div class="descriptCont">
+                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
+                            <p>estos serian los ingredientes</p>
+                        </div>
                     </div>
                     <div class="itemContainer">
                         <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
+                        <div class="frontCont">
+                            <div class="headerContainer">
+                                <h2>ID. CockTail</h2>
+                                <button class="favoriteButton">★</button>
+                            </div>
+                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
                         </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
+                        <div class="descriptCont">
+                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
+                            <p>estos serian los ingredientes</p>
+                        </div>
                     </div>
                     <div class="itemContainer">
                         <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
+                        <div class="frontCont">
+                            <div class="headerContainer">
+                                <h2>ID. CockTail</h2>
+                                <button class="favoriteButton">★</button>
+                            </div>
+                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
                         </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
+                        <div class="descriptCont">
+                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
+                            <p>estos serian los ingredientes</p>
+                        </div>
                     </div>
                     <div class="itemContainer">
                         <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
+                        <div class="frontCont">
+                            <div class="headerContainer">
+                                <h2>ID. CockTail</h2>
+                                <button class="favoriteButton">★</button>
+                            </div>
+                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
                         </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
+                        <div class="descriptCont">
+                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
+                            <p>estos serian los ingredientes</p>
+                        </div>
                     </div>
                     <div class="itemContainer">
                         <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
+                        <div class="frontCont">
+                            <div class="headerContainer">
+                                <h2>ID. CockTail</h2>
+                                <button class="favoriteButton">★</button>
+                            </div>
+                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
                         </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
+                        <div class="descriptCont">
+                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
+                            <p>estos serian los ingredientes</p>
                         </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
                     </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
-                        </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
-                        </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
-                        </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="headerContainer">
-                            <h2>ID. CockTail</h2>
-                            <button class="favoriteButton">★</button>
-                        </div>
-                        <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        <p>esta seria la receta aaaaaaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaa</p>
-                        <p>estos serian los ingredientes</p>
-                    </div>
+    
                 </div>
 
 
