--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <head>
 <title>reto asinc</title>
 <link rel="stylesheet" href="css/style.css">
-    <script src="javaScript/script.js"></script>
-    <script src="javaScript/favorites.js"></script>
-    <script src="javaScript/cocktail_card_item.js"></script>
+    <script src="javaScript/script.js" defer></script>
+    <script src="javaScript/favorites.js" defer></script>
+    <script src="javaScript/cocktail_card_item.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +25,6 @@
             <div class="headerContainer">
                 <h1>Cocktail</h1>
                 <button id="add-cocktail">Random cocktail</button>
-                <progress id="progress-bar" class="hidden"></progress>
             </div>
             <div id="catalogContainer">
                 <!--
