--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="MainDiv">
 
-            <header><h1>Titulo?</h1></header>
+            <header><h1>CockSommelier</h1></header>
 
 
             <main>
@@ -99,7 +99,7 @@
 
                 <div class="headerContainer">
                     <h1>Cocktail</h1>
-                    <button id="add-cocktail">Random cocktail</button>
+                    <button id="add-cocktail" class="loadButton">Random cocktail</button>
                 </div>
                 <div id="catalogContainer">
                     <!--
