--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 <div class="headerContainer">
                     <h1>Cocktail</h1>
-                    <button id="add-cocktail" class="loadButton">Random cocktail</button>
+                    <button id="add-cocktail">Random cocktail</button>
                 </div>
                 <div id="catalogContainer">
                     <!--
