--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h1>Favorites</h1>
                 <div id="favoriteContainer">
 
+                    <!--
                     <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
                         <div class="frontCont">
                             <div class="headerContainer">
                                 <h2>ID. CockTail</h2>
@@ -36,66 +36,9 @@
                             <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
                             <p>estos serian los ingredientes</p>
                         </div>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="frontCont">
-                            <div class="headerContainer">
-                                <h2>ID. CockTail</h2>
-                                <button class="favoriteButton">★</button>
-                            </div>
-                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        </div>
-                        <div class="descriptCont">
-                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
-                            <p>estos serian los ingredientes</p>
-                        </div>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="frontCont">
-                            <div class="headerContainer">
-                                <h2>ID. CockTail</h2>
-                                <button class="favoriteButton">★</button>
-                            </div>
-                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        </div>
-                        <div class="descriptCont">
-                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
-                            <p>estos serian los ingredientes</p>
-                        </div>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="frontCont">
-                            <div class="headerContainer">
-                                <h2>ID. CockTail</h2>
-                                <button class="favoriteButton">★</button>
-                            </div>
-                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        </div>
-                        <div class="descriptCont">
-                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
-                            <p>estos serian los ingredientes</p>
-                        </div>
-                    </div>
-                    <div class="itemContainer">
-                        <!-- ID. es donde va el id, mientras que el CockTail es donde va el nombre-->
-                        <div class="frontCont">
-                            <div class="headerContainer">
-                                <h2>ID. CockTail</h2>
-                                <button class="favoriteButton">★</button>
-                            </div>
-                            <img src="https://www.thecocktaildb.com/images/media/drink/metwgh1606770327.jpg">
-                        </div>
-                        <div class="descriptCont">
-                            <p>Gin, Chocolate liqueur, Amaretto, Chocolate Sauce, Salted Chocolate Add ice, toffee gin, chocolate liqueur and Amaretto to a cocktail shaker and shake vigorously. Pour the chocolate syrup into a saucer and dip the top of a martini glass into the sauce. Grate some of the Willie\'s sea salt chocolate into another saucer and dip the coated glass, so the flakes stick to the sauce, creating a chocolate rim! Pour the contents of the shaker into your chocolatey glass and sprinkle with more grated chocolate - enjoy!</p>
-                            <p>estos serian los ingredientes</p>
-                        </div>
-                    </div>
+                    </div> -->
     
                 </div>
-
 
                 <div class="headerContainer">
                     <h1>Cocktail</h1>
