Hecho a fuerza bruta las modificaciones de Facundo

--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
 </head>
 
 <body>
-
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
-
-    </body>
     <div class="MainDiv">
 
-        <header><h1>Titulo?</h1></header>
+        <header><h1>CockSommelier</h1></header>
 
         <main>
             <div class="headerContainer">
