--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <html>
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>reto asinc</title>
-        <link rel="stylesheet" href="css/style.css">
-        <script src="javaScript/script.js" defer></script>
-    </head>
-    <body>
+<head>
+<title>reto asinc</title>
+<link rel="stylesheet" href="css/style.css">
+    <script src="javaScript/script.js" defer></script>
+    <script src="javaScript/favorites.js" defer></script>
+    <script src="javaScript/cocktail_card_item.js" defer></script>
+</head>
 
 <body>
     <div class="MainDiv">
