--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
     <div class="MainDiv">
 
-        <header><h1>CockSommelier</h1></header>
+        <header><h1>CockTul</h1></header>
 
         <main>
+            
+            <h1>Favorites</h1>
+            <div id="favoriteContainer">
+
+            </div>
+
             <div class="headerContainer">
                 <h1>Cocktail</h1>
                 <button id="add-cocktail">Random cocktail</button>
@@ -34,21 +40,6 @@
                     <p>estos serian los ingredientes</p>
                 </div>
             -->
-            </div>
-
-            <h1>Favorites</h1>
-            <div id="favoriteContainer">
-
-            </div>
-
-
-            <div class="headerContainer">
-                <h1>Catalog</h1>
-                <button>Open Catalog</button>
-            </div>
-            <div id="catalogContainer">
-
-
             </div>
 
         </main>
