--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="headerContainer">
                 <h1>Cocktail</h1>
                 <button id="add-cocktail">Random cocktail</button>
+                <h1 id="loader" class="loaderinvisible"><span>l</span><span>o</span><span>a</span><span>d</span><span>i</span><span>n</span><span>g</span><span>.</span><span>.</span>.</h1>
             </div>
             <div id="catalogContainer">
                 <!--
